Use pako instead of zlib

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/sjcl/1.0.8/sjcl.min.js'></script>
     <!--            https://github.com/bitwiseshiftleft/sjcl            -->
-    <script src="{{ url_for('static', filename='zlib.min.js') }}"></script>
-    <!--               https://github.com/imaya/zlib.js               -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/pako/1.0.10/pako.min.js'></script>
+    <!--                https://github.com/nodeca/pako                -->
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <link href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
     <link rel='stylesheet' href="{{ url_for('static', filename='style.css') }}">
