Use jsDelivr instead of cdnjs

--- a/ste/templates/index.html
+++ b/ste/templates/index.html
@@ -8,13 +8,13 @@
     <meta name='author' content='Sunshine'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Simple Text Encryption</title>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/sjcl/1.0.8/sjcl.min.js'></script>
-    <!--            https://github.com/bitwiseshiftleft/sjcl            -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/pako/1.0.10/pako.min.js'></script>
-    <!--                https://github.com/nodeca/pako                -->
+    <script src='https://cdn.jsdelivr.net/npm/jquery@3'></script>
+    <script src='https://cdn.jsdelivr.net/npm/sjcl@1'></script>
+    <!--      https://github.com/bitwiseshiftleft/sjcl      -->
+    <script src='https://cdn.jsdelivr.net/npm/pako@1/dist/pako.min.js'></script>
+    <!--                   https://github.com/nodeca/pako                    -->
     <script src="{{ url_for('static', filename='script.js') }}"></script>
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css' rel='stylesheet'>
     <link rel='stylesheet' href="{{ url_for('static', filename='style.css') }}">
 
     <script>
