--- a/ste/templates/index.html
+++ b/ste/templates/index.html
@@ -13,6 +13,8 @@
     <!--      https://github.com/bitwiseshiftleft/sjcl      -->
     <script src='https://cdn.jsdelivr.net/npm/pako@1/dist/pako.min.js'></script>
     <!--                   https://github.com/nodeca/pako                    -->
+    <script src='https://cdn.jsdelivr.net/npm/sweetalert2@9'></script>
+    <!--        https://github.com/sweetalert2/sweetalert2         -->
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css' rel='stylesheet'>
     <link rel='stylesheet' href="{{ url_for('static', filename='style.css') }}">
